# gcc64bits32bitsDebugReleaseAssertCMake

./: CMakeLists.txt  Makefile  README.md  gcc64_make.c  test.sh  testall.sh
hello/: CMakeLists.txt  hello.h
world/: CMakeLists.txt  world.c  world.h
